# termux

./: README.md  publish.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/termux/: pubspec.yaml
package/termux/example/: termux_example.dart
package/termux/lib/: termux.dart
package/termux/test/: termux_test.dart
package/termux_android/: pubspec.yaml
package/termux_android/lib/: termux_android.dart
package/termux_android/test/: termux_android_test.dart
package/termux_apis/: pubspec.yaml
package/termux_apis/example/: termux_apis_example.dart
package/termux_apis/lib/: termux_apis.dart
package/termux_apis/test/: termux_apis_test.dart
package/termux_cli/: pubspec.yaml
package/termux_cli/example/: termux_cli_example.dart
package/termux_cli/lib/: termux_cli.dart
package/termux_cli/test/: termux_cli_test.dart
package/termux_client/: pubspec.yaml
package/termux_client/example/: termux_client_example.dart
package/termux_client/lib/: termux_client.dart
package/termux_client/test/: termux_client_test.dart
package/termux_dart/: pubspec.yaml
package/termux_dart/example/: termux_dart_example.dart
package/termux_dart/lib/: termux_dart.dart
package/termux_dart/test/: termux_dart_test.dart
package/termux_flutter/: pubspec.yaml
package/termux_flutter/lib/: termux_flutter.dart
package/termux_flutter/test/: termux_flutter_test.dart
package/termux_fucshia/: pubspec.yaml
package/termux_fucshia/lib/: termux_fucshia.dart
package/termux_ios/: pubspec.yaml
package/termux_linux/: pubspec.yaml
package/termux_macos/: README.md  pubspec.yaml
package/termux_server/: pubspec.yaml
package/termux_web/: pubspec.yaml
package/termux_windows/: pubspec.yaml
test/: termux_test.dart
(+14 files in other folders)
